--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <div id="RonanSoriano"></div>
 
       <script src="./app.js"></script>
+       <footer>
+        <p>Created by Angelo Gerard T. Mallari | Section: 3 BSCS - 2</p>
+      </footer>
     </center>    
   </body>
 
