--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <script src="./app.js"></script>
        <footer>
-        <p>Created by Angelo Gerard T. Mallari | Section: 3 BSCS - 2</p>
+        <p>Created by Ronan D. Soriano | Section: 3 BSCS - 2</p>
       </footer>
     </center>    
   </body>
